--- a/TODO.txt
+++ b/TODO.txt
@@ -7,6 +7,7 @@ main driver in root directory (primetime_discord_bot.py):
 - read https://realpython.com/how-to-make-a-discord-bot-python/
 - contain one reference to API for each section
 - used for processing/method for every command for discord bot.
+- make messaged embedded
 
 data_dragon.py
 - define functions for mapping champion id-> name, icon pngs, etc.
@@ -19,40 +20,44 @@ maybe nosql db to store matches and other info. bring # of requests down
 
 -------------------------------------------------------------
 list of commands
-!help
-!commands
-!disable
-!enable
+/help
+/commands
 --------------------------------------------------------------
 
-!mastery [username] [optional: champion]
+/mastery [username] [optional: champion]
 - display a formatted discord message regarding masteries returned by https://developer.riotgames.com/apis#champion-mastery-v4
 
-!duo [user1] [user2]
+/duo [user1] [user2]
 - return duo w/r for two players over last ? games
 
-!duo [user1] [champion1] [user2] [champion2]
+/duo [user1] [champion1] [user2] [champion2]
 
-!wr [username] [optional:champion]
+/wr [username] [optional:champion]
 - return user winrate (can specify by champion) 
 
-!rank [username] 
+/rank [username] 
 - return rank, winrate, lp for username
 
-!flexrank [username]
+/flexrank [username]
 - return flex rank, wr,lp,etc for username
 
-!freechamps 
+/freechamps 
 - return free champion rotation
 
-!currentgame [username]
+/currentgame [username]
 - live game info if available
 
-!championstats [username] [champion]
+/championstats [username] [champion]
 - cs, kda, w/r 
 
-!championinfo [champion]
+/championinfo [champion]
 - formated message containing champion description, abilities etc. using https://developer.riotgames.com/docs/lol#data-dragon
 
 unsure of these, but could be fun (!bestchamp,!bestrole, ...)
+
+--------------------------------------------------------------
+DONE:
+/rank [username] 
+- get username's rank,lp and winrate
+
 
