changed how df is filtered in match helper

--- a/testnotebook.ipynb
+++ b/testnotebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "90"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "1609488000.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3161,7 +3161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3294,11 +3294,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df123 = champion_stats('Halloween Jack','Malzahar',420).groupby(['championName']).mean()"
+    "df123 = champion_stats_helper('Halloween Jack','Malzahar',420).groupby(['championName']).mean()"
    ]
   },
   {
@@ -3319,6 +3319,120 @@
    ],
    "source": [
     "df123['kills'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CS</th>\n",
+       "      <th>CS/min</th>\n",
+       "      <th>assists</th>\n",
+       "      <th>championId</th>\n",
+       "      <th>damageDealtToObjectives</th>\n",
+       "      <th>deaths</th>\n",
+       "      <th>firstBlood</th>\n",
+       "      <th>firstBloodAssist</th>\n",
+       "      <th>gameId</th>\n",
+       "      <th>goldEarned</th>\n",
+       "      <th>kills</th>\n",
+       "      <th>queueId</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>totalDamageDealtToChampions</th>\n",
+       "      <th>totalDamageTaken</th>\n",
+       "      <th>win</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>championName</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Malzahar</th>\n",
+       "      <td>201.883333</td>\n",
+       "      <td>6.785175</td>\n",
+       "      <td>9.233333</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>8144.9</td>\n",
+       "      <td>4.525</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.775524e+09</td>\n",
+       "      <td>11650.45</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>420.0</td>\n",
+       "      <td>1.612588e+12</td>\n",
+       "      <td>21258.633333</td>\n",
+       "      <td>14509.983333</td>\n",
+       "      <td>0.583333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      CS    CS/min   assists  championId  \\\n",
+       "championName                                               \n",
+       "Malzahar      201.883333  6.785175  9.233333        90.0   \n",
+       "\n",
+       "              damageDealtToObjectives  deaths  firstBlood  firstBloodAssist  \\\n",
+       "championName                                                                  \n",
+       "Malzahar                       8144.9   4.525         0.0               0.0   \n",
+       "\n",
+       "                    gameId  goldEarned  kills  queueId     timestamp  \\\n",
+       "championName                                                           \n",
+       "Malzahar      3.775524e+09    11650.45   4.25    420.0  1.612588e+12   \n",
+       "\n",
+       "              totalDamageDealtToChampions  totalDamageTaken       win  \n",
+       "championName                                                           \n",
+       "Malzahar                     21258.633333      14509.983333  0.583333  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df123"
    ]
   },
   {
