added lane helper

--- a/testnotebook.ipynb
+++ b/testnotebook.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "90"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "1609488000.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3176,36 +3176,26 @@
     "# role1 str = DUO, DUO_CARRY, DUO_SUPPORT, NONE, and SOLO\n",
     "# role2 str\n",
     "\n",
-    "def champion_stats_helper(username,champion,queueId=0):  \n",
+    "def get_matches_from_db(encryptedAccountID):\n",
     "    # Generate unix timestamp for 01/01/Current Year (LoL season start apprx.)\n",
     "    year = datetime.date.today().year\n",
     "    date = datetime.datetime(year, 1, 1)\n",
     "    NEW_YEAR_TIME_STAMP = date.timestamp()\n",
     "\n",
-    "    # if user provided champion parameters, convert string to numeric id\n",
-    "    championId = None\n",
-    "    if champion.lower() not in CHAMPION_NAME_TO_ID:\n",
-    "        return -1\n",
-    "    else:\n",
-    "        championId = CHAMPION_NAME_TO_ID[champion.lower()]\n",
-    "\n",
     "    # request accountId and check for valid response\n",
-    "    accountId = sv4.username_to_encryptedAccountID(username)\n",
-    "    if accountId == -1:\n",
-    "        return -1\n",
-    "\n",
+    "    accountId = encryptedAccountID\n",
     "    total = 0\n",
     "    beginIndex= 0\n",
     "    endIndex=100\n",
     "    objects = []\n",
-    "    \n",
-    "    # find timestamp for most recent game stored in db. Only request riot api for \n",
+    "\n",
+    "    # find timestamp for most recent game stored in db. Only request riot api for\n",
     "    # games that occured after this timestamp\n",
-    "    mostRecentGame =  db.matches.find({'accountId':'SVZQCjf0j36EDykPawyQee0zpeEiSJws5NpZK9AH-DdFNDkOk3HoMQYa'}).sort(\"timestamp\",-1)\n",
+    "    mostRecentGame =  db.matches.find({'accountId':accountId}).sort(\"timestamp\",-1)\n",
     "    mostRecentTimestamp = None\n",
     "    if db.matches.count_documents({'accountId':accountId}) != 0:\n",
     "        mostRecentTimestamp = mostRecentGame[0]['timestamp']\n",
-    "    \n",
+    "\n",
     "    loop = True\n",
     "    while loop:\n",
     "        #get match list for 100 game window (max allowed by riot api) and check for valid response\n",
@@ -3216,7 +3206,7 @@
     "            print(\"Could not retrieve match data for \"+username)\n",
     "            return -1\n",
     "\n",
-    "        \n",
+    "\n",
     "        #get list of matchDtos from api response d\n",
     "        matchList = d['matches']\n",
     "        for i in matchList:\n",
@@ -3228,22 +3218,22 @@
     "                    break\n",
     "                else:\n",
     "                    return -1\n",
-    "        \n",
-    "        \n",
+    "\n",
+    "\n",
     "            # only process matches in current season (year)\n",
     "            if match['gameCreation']/1000 <= NEW_YEAR_TIME_STAMP: #conversion from ms to s\n",
     "                loop = False\n",
     "                break\n",
-    "        \n",
+    "\n",
     "            #exclude remake case (disconnected game less than 240 seconds)\n",
     "            if match['gameDuration'] < 240:\n",
     "                continue\n",
-    "            \n",
+    "\n",
     "            # only request matches from riot api for matches not in db\n",
     "            if mostRecentTimestamp != None and match['gameCreation'] <= mostRecentTimestamp:\n",
     "                loop = False\n",
     "                break\n",
-    "            else:   \n",
+    "            else:\n",
     "                #find participantId for username- participantId is used to identify a user's game stats\n",
     "                numPlayers = 10\n",
     "                participantInfo = match['participantIdentities']\n",
@@ -3251,7 +3241,7 @@
     "                for j in participantInfo:\n",
     "                    if j['player']['accountId'] == accountId:\n",
     "                        participantId = j['participantId']\n",
-    "                        \n",
+    "\n",
     "                # riot uses 1 based indexing for array of participantstats\n",
     "                participantStats = match['participants'][participantId-1]['stats']\n",
     "                d = {\n",
@@ -3281,15 +3271,70 @@
     "\n",
     "        beginIndex += 100\n",
     "        endIndex += 100\n",
-    "    \n",
+    "\n",
     "    if len(objects)>0:\n",
     "        db.matches.insert_many(objects)\n",
-    "    \n",
-    "    # apply filters at the bitter end!\n",
-    "    df = pd.DataFrame(list(db.matches.find({'accountId':accountId,'championId':championId})))\n",
-    "    if queueId != 0:\n",
-    "        df = df[df['queueId']==queueId]\n",
-    "    return df"
+    "\n",
+    "    df = pd.DataFrame(list(db.matches.find({'accountId':accountId})))\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get matches for both users\n",
+    "df1 = get_matches_from_db(sv4.username_to_encryptedAccountID('Halloween Jack'))\n",
+    "df2 = get_matches_from_db(sv4.username_to_encryptedAccountID('TaylorMade'))\n",
+    "\n",
+    "df1_on_duo = df1[[True if i in df2['gameId'].values else False for i in df1['gameId'].values]]\n",
+    "df2_on_duo = df2[[True if i in df1['gameId'].values else False for i in df2['gameId'].values]]\n",
+    "\n",
+    "duo_df = df1_on_duo.join(df2_on_duo.set_index('gameId'),on='gameId',how=\"inner\",rsuffix=\"_duo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.48344370860927155"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# WR\n",
+    "duo_df['win'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "73"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sum\n",
+    "duo_df['win'].sum()"
    ]
   },
   {
@@ -3298,7 +3343,142 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df123 = champion_stats_helper('Halloween Jack','Malzahar',420).groupby(['championName']).mean()"
+    "# top 5 most played + WR\n",
+    "# specify Username,champion,role\n",
+    "duo_grouped = duo_df.groupby(['championName','championName_duo']).count().sort_values('win_duo',ascending=False)[:5]\n",
+    "top5 =  duo_grouped.index.values\n",
+    "counts = duo_grouped['win'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nautilus    (SUPPORT) +  Jhin        (ADC)    7 games 71.43% winrate   \n",
+      "Malzahar    (MID)     +  Kaisa       (ADC)    6 games 50.00% winrate   \n",
+      "Malzahar    (MID)     +  Jhin        (ADC)    5 games 40.00% winrate   \n",
+      "Galio       (MID)     +  Kaisa       (ADC)    5 games 80.00% winrate   \n",
+      "Braum       (SUPPORT) +  Tristana    (ADC)    5 games 80.00% winrate   \n"
+     ]
+    }
+   ],
+   "source": [
+    "idx = 0\n",
+    "for i,j in top5:\n",
+    "    tmp = duo_df[(duo_df['championName']==i)& (duo_df['championName_duo']==j)]\n",
+    "    lane1 = lane(tmp['lane'].value_counts().index[0],tmp['role'].value_counts().index[0])\n",
+    "    lane2 = lane(tmp['lane_duo'].value_counts().index[0],tmp['role_duo'].value_counts().index[0])\n",
+    "    total_games = str(counts[idx]) + \" games \"\n",
+    "    winrate = \"{:.2f}\".format(tmp['win'].mean() * 100) + \"% winrate\"\n",
+    "    \n",
+    "    \n",
+    "          # s = \"\"+i:<25+\" (\"+ lane(tmp['lane'].value_counts().index[0],tmp['role'].value_counts().index[0])+\") \"+j+\" (\"+lane(tmp['lane_duo'].value_counts().index[0],tmp['role_duo'].value_counts().index[0])+\") \"+str(counts[idx])+\" games \"+ str(tmp['win'].mean()) + \" winrate\"\n",
+    "    #print(f\"{i+' ('+lane1+')':<25}\")\n",
+    "    print(f\"{i:<12}{'('+lane1+')':<9}{' +  '+j:<16}{'('+lane2+')':<9}{total_games+winrate:<25}\")\n",
+    "    idx += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = duo_df[(duo_df['championName']==\"Nautilus\")& (duo_df['championName_duo']==\"Jhin\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DUO_CARRY'"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp['role_duo'].value_counts().index[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "{\n",
+    "    (MID_LANE, SOLO): MIDDLE,\n",
+    "    (TOP_LANE, SOLO): TOP,\n",
+    "    (JUNGLE, NONE): JUNGLE,\n",
+    "    (BOT_LANE, DUO_CARRY): BOTTOM,\n",
+    "    (BOT_LANE, DUO_SUPPORT): UTILITY\n",
+    "}\n",
+    "\"\"\"\n",
+    "def lane(lane,role):\n",
+    "    if lane == \"MIDDLE\":\n",
+    "        return \"MID\"\n",
+    "    if lane == \"TOP\":\n",
+    "        return lane\n",
+    "    if lane == \"JUNGLE\":\n",
+    "        return lane\n",
+    "    if lane ==\"BOTTOM\" and role==\"DUO_CARRY\":\n",
+    "        return \"ADC\"\n",
+    "    else:\n",
+    "        return \"SUPPORT\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######\n",
+    "# User: User1\n",
+    "# Duo Statistics with User2\n",
+    "# Total Games Played: \n",
+    "# Winrate: \n",
+    "# Most Played Pairings (user1, user2):\n",
+    "# Malzahar (mid) + Kaisa (ADC) 7 Games 47% WR\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MIDDLE    196\n",
+       "BOTTOM    135\n",
+       "NONE       97\n",
+       "JUNGLE     65\n",
+       "TOP        61\n",
+       "Name: lane, dtype: int64"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['lane'].value_counts()"
    ]
   },
   {
@@ -3307,132 +3487,95 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4.25"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "unsupported format string passed to tuple.__format__",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-147-85d900c56615>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;34m\"{0:<10} {1:>8} {2:>8}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"hello\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"hello\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"hello\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported format string passed to tuple.__format__"
+     ]
     }
    ],
    "source": [
-    "df123['kills'][0]"
+    "\"{0:<10} {1:>8} {2:>8}\".format((\"hello\",\"hello\",\"hello\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CS</th>\n",
-       "      <th>CS/min</th>\n",
-       "      <th>assists</th>\n",
-       "      <th>championId</th>\n",
-       "      <th>damageDealtToObjectives</th>\n",
-       "      <th>deaths</th>\n",
-       "      <th>firstBlood</th>\n",
-       "      <th>firstBloodAssist</th>\n",
-       "      <th>gameId</th>\n",
-       "      <th>goldEarned</th>\n",
-       "      <th>kills</th>\n",
-       "      <th>queueId</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>totalDamageDealtToChampions</th>\n",
-       "      <th>totalDamageTaken</th>\n",
-       "      <th>win</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>championName</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Malzahar</th>\n",
-       "      <td>201.883333</td>\n",
-       "      <td>6.785175</td>\n",
-       "      <td>9.233333</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>8144.9</td>\n",
-       "      <td>4.525</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.775524e+09</td>\n",
-       "      <td>11650.45</td>\n",
-       "      <td>4.25</td>\n",
-       "      <td>420.0</td>\n",
-       "      <td>1.612588e+12</td>\n",
-       "      <td>21258.633333</td>\n",
-       "      <td>14509.983333</td>\n",
-       "      <td>0.583333</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                      CS    CS/min   assists  championId  \\\n",
-       "championName                                               \n",
-       "Malzahar      201.883333  6.785175  9.233333        90.0   \n",
-       "\n",
-       "              damageDealtToObjectives  deaths  firstBlood  firstBloodAssist  \\\n",
-       "championName                                                                  \n",
-       "Malzahar                       8144.9   4.525         0.0               0.0   \n",
-       "\n",
-       "                    gameId  goldEarned  kills  queueId     timestamp  \\\n",
-       "championName                                                           \n",
-       "Malzahar      3.775524e+09    11650.45   4.25    420.0  1.612588e+12   \n",
-       "\n",
-       "              totalDamageDealtToChampions  totalDamageTaken       win  \n",
-       "championName                                                           \n",
-       "Malzahar                     21258.633333      14509.983333  0.583333  "
+       "'Malzahar             Malzahar'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df123"
+    "\"{0:20} {0:8}\".format(\"Malzahar\",\"Middle\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Malzahar       Middle     \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{champion:<15}{lane:<10}{}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "champion = \"Malzahar\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lane= \"Middle\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = []\n",
+    "for i in CHAMPION_NAME_TO_ID:\n",
+    "    l.append(len(i))\n",
+    "\n",
+    "print(max(l))"
    ]
   },
   {
