--- a/testnotebook.ipynb
+++ b/testnotebook.ipynb
@@ -7261,34 +7261,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = requests.get('http://ddragon.leagueoflegends.com/cdn/11.12.1/data/en_US/champion/Aatrox.json')"
+    "r = requests.get('http://ddragon.leagueoflegends.com/cdn/11.12.1/data/en_US/champion/Samira.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': 'AatroxQ',\n",
-       "  'name': 'The Darkin Blade',\n",
-       "  'description': 'Aatrox slams his greatsword down, dealing physical damage. He can swing three times, each with a different area of effect.',\n",
-       "  'tooltip': 'Aatrox slams his greatsword, dealing <physicalDamage>{{ qdamage }} physical damage</physicalDamage>. If they are hit on the edge, they are briefly <status>Knocked Up</status> and they take <physicalDamage>{{ qedgedamage }}</physicalDamage> instead. This Ability can be <recast>Recast</recast> twice, each one changing shape and dealing 25% more damage than the previous one.',\n",
-       "  'leveltip': {'label': ['Cooldown', 'Damage', 'Total AD Ratio'],\n",
-       "   'effect': ['{{ cooldown }} -> {{ cooldownNL }}',\n",
-       "    '{{ qbasedamage }} -> {{ qbasedamageNL }}',\n",
-       "    '{{ qtotaladratio*100.000000 }}% -> {{ qtotaladrationl*100.000000 }}%']},\n",
+       "[{'id': 'SamiraQ',\n",
+       "  'name': 'Flair',\n",
+       "  'description': 'Samira fires a shot or swings her sword, dealing damage. If cast during Wild Rush, strike all enemies in her path upon completion.',\n",
+       "  'tooltip': 'Samira fires a shot, dealing <physicalDamage>{{ damagecalc }} physical damage</physicalDamage> to the first enemy hit.<br /><br />If this Ability is cast towards an enemy in melee range, Samira will instead slash with her sword, dealing <physicalDamage>{{ damagecalc }} physical damage</physicalDamage>. ',\n",
+       "  'leveltip': {'label': ['Damage', 'Cooldown', 'Percent of Attack Damage'],\n",
+       "   'effect': ['{{ basedamage }} -> {{ basedamageNL }}',\n",
+       "    '{{ cooldown }} -> {{ cooldownNL }}',\n",
+       "    '{{ qadratio*100.000000 }}% -> {{ qadrationl*100.000000 }}%']},\n",
        "  'maxrank': 5,\n",
-       "  'cooldown': [14, 12, 10, 8, 6],\n",
-       "  'cooldownBurn': '14/12/10/8/6',\n",
-       "  'cost': [0, 0, 0, 0, 0],\n",
-       "  'costBurn': '0',\n",
+       "  'cooldown': [6, 5, 4, 3, 2],\n",
+       "  'cooldownBurn': '6/5/4/3/2',\n",
+       "  'cost': [30, 30, 30, 30, 30],\n",
+       "  'costBurn': '30',\n",
        "  'datavalues': {},\n",
        "  'effect': [None,\n",
        "   [0, 0, 0, 0, 0],\n",
@@ -7303,114 +7303,107 @@
        "   [0, 0, 0, 0, 0]],\n",
        "  'effectBurn': [None, '0', '0', '0', '0', '0', '0', '0', '0', '0', '0'],\n",
        "  'vars': [],\n",
-       "  'costType': 'No Cost',\n",
+       "  'costType': ' {{ abilityresourcename }}',\n",
        "  'maxammo': '-1',\n",
-       "  'range': [25000, 25000, 25000, 25000, 25000],\n",
-       "  'rangeBurn': '25000',\n",
-       "  'image': {'full': 'AatroxQ.png',\n",
-       "   'sprite': 'spell0.png',\n",
+       "  'range': [950, 950, 950, 950, 950],\n",
+       "  'rangeBurn': '950',\n",
+       "  'image': {'full': 'SamiraQ.png',\n",
+       "   'sprite': 'spell10.png',\n",
+       "   'group': 'spell',\n",
+       "   'x': 96,\n",
+       "   'y': 96,\n",
+       "   'w': 48,\n",
+       "   'h': 48},\n",
+       "  'resource': '{{ cost }} {{ abilityresourcename }}'},\n",
+       " {'id': 'SamiraW',\n",
+       "  'name': 'Blade Whirl',\n",
+       "  'description': 'Samira slashes around her, damaging enemies and destroying enemy missiles.',\n",
+       "  'tooltip': 'Samira slashes around her for {{ slashduration }} seconds, damaging enemies twice for <physicalDamage>{{ damagecalc }} physical damage</physicalDamage> each and destroying any enemy missiles that enter the area.<br /><br />',\n",
+       "  'leveltip': {'label': ['Damage', 'Cooldown'],\n",
+       "   'effect': ['{{ basedamage }} -> {{ basedamageNL }}',\n",
+       "    '{{ cooldown }} -> {{ cooldownNL }}']},\n",
+       "  'maxrank': 5,\n",
+       "  'cooldown': [30, 28, 26, 24, 22],\n",
+       "  'cooldownBurn': '30/28/26/24/22',\n",
+       "  'cost': [60, 60, 60, 60, 60],\n",
+       "  'costBurn': '60',\n",
+       "  'datavalues': {},\n",
+       "  'effect': [None,\n",
+       "   [0, 0, 0, 0, 0],\n",
+       "   [0, 0, 0, 0, 0],\n",
+       "   [0, 0, 0, 0, 0],\n",
+       "   [0, 0, 0, 0, 0],\n",
+       "   [0, 0, 0, 0, 0],\n",
+       "   [0, 0, 0, 0, 0],\n",
+       "   [0, 0, 0, 0, 0],\n",
+       "   [0, 0, 0, 0, 0],\n",
+       "   [0, 0, 0, 0, 0],\n",
+       "   [0, 0, 0, 0, 0]],\n",
+       "  'effectBurn': [None, '0', '0', '0', '0', '0', '0', '0', '0', '0', '0'],\n",
+       "  'vars': [],\n",
+       "  'costType': ' {{ abilityresourcename }}',\n",
+       "  'maxammo': '-1',\n",
+       "  'range': [325, 325, 325, 325, 325],\n",
+       "  'rangeBurn': '325',\n",
+       "  'image': {'full': 'SamiraW.png',\n",
+       "   'sprite': 'spell10.png',\n",
+       "   'group': 'spell',\n",
+       "   'x': 144,\n",
+       "   'y': 96,\n",
+       "   'w': 48,\n",
+       "   'h': 48},\n",
+       "  'resource': '{{ cost }} {{ abilityresourcename }}'},\n",
+       " {'id': 'SamiraE',\n",
+       "  'name': 'Wild Rush',\n",
+       "  'description': \"Samira dashes through an enemy (including structures), slashing enemies she passes through and gaining Attack Speed. Killing an enemy champion refreshes this ability's cooldown.\",\n",
+       "  'tooltip': \"Samira dashes through an enemy (including structures), slashing enemies she passes through dealing <magicDamage>{{ dashdamage }} magic damage</magicDamage> and gaining <attackSpeed>{{ bonusattackspeed*100 }}% Attack Speed</attackSpeed> for 3 seconds. <br /><br />If an enemy champion is killed within 3 seconds of Samira damaging them, Wild Rush's cooldown is reset.\",\n",
+       "  'leveltip': {'label': ['Damage', 'Cooldown', 'Attack Speed'],\n",
+       "   'effect': ['{{ basedamage }} -> {{ basedamageNL }}',\n",
+       "    '{{ cooldown }} -> {{ cooldownNL }}',\n",
+       "    '{{ bonusattackspeed*100.000000 }}% -> {{ bonusattackspeednl*100.000000 }}%']},\n",
+       "  'maxrank': 5,\n",
+       "  'cooldown': [20, 18, 16, 14, 12],\n",
+       "  'cooldownBurn': '20/18/16/14/12',\n",
+       "  'cost': [40, 40, 40, 40, 40],\n",
+       "  'costBurn': '40',\n",
+       "  'datavalues': {},\n",
+       "  'effect': [None,\n",
+       "   [0, 0, 0, 0, 0],\n",
+       "   [0, 0, 0, 0, 0],\n",
+       "   [0, 0, 0, 0, 0],\n",
+       "   [0, 0, 0, 0, 0],\n",
+       "   [0, 0, 0, 0, 0],\n",
+       "   [0, 0, 0, 0, 0],\n",
+       "   [0, 0, 0, 0, 0],\n",
+       "   [0, 0, 0, 0, 0],\n",
+       "   [0, 0, 0, 0, 0],\n",
+       "   [0, 0, 0, 0, 0]],\n",
+       "  'effectBurn': [None, '0', '0', '0', '0', '0', '0', '0', '0', '0', '0'],\n",
+       "  'vars': [],\n",
+       "  'costType': ' {{ abilityresourcename }}',\n",
+       "  'maxammo': '-1',\n",
+       "  'range': [600, 600, 600, 600, 600],\n",
+       "  'rangeBurn': '600',\n",
+       "  'image': {'full': 'SamiraE.png',\n",
+       "   'sprite': 'spell10.png',\n",
        "   'group': 'spell',\n",
        "   'x': 192,\n",
-       "   'y': 48,\n",
+       "   'y': 96,\n",
        "   'w': 48,\n",
        "   'h': 48},\n",
-       "  'resource': 'No Cost'},\n",
-       " {'id': 'AatroxW',\n",
-       "  'name': 'Infernal Chains',\n",
-       "  'description': 'Aatrox smashes the ground, dealing damage to the first enemy hit. Champions and large monsters have to leave the impact area quickly or they will be dragged to the center and take the damage again.',\n",
-       "  'tooltip': 'Aatrox fires a chain, <status>Slowing</status> the first enemy hit by {{ wslowpercentage*-100 }}% for {{ wslowduration }} seconds and dealing <physicalDamage>{{ wdamage }} physical damage</physicalDamage>. Champions and large jungle monsters have {{ wslowduration }} seconds to leave the impact area or be <status>Pulled</status> back to the center and damaged again for the same amount.',\n",
-       "  'leveltip': {'label': ['Cooldown', 'Damage'],\n",
-       "   'effect': ['{{ cooldown }} -> {{ cooldownNL }}',\n",
-       "    '{{ wbasedamage }} -> {{ wbasedamageNL }}']},\n",
-       "  'maxrank': 5,\n",
-       "  'cooldown': [26, 23, 20, 17, 14],\n",
-       "  'cooldownBurn': '26/23/20/17/14',\n",
-       "  'cost': [0, 0, 0, 0, 0],\n",
-       "  'costBurn': '0',\n",
-       "  'datavalues': {},\n",
-       "  'effect': [None,\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0]],\n",
-       "  'effectBurn': [None, '0', '0', '0', '0', '0', '0', '0', '0', '0', '0'],\n",
-       "  'vars': [],\n",
-       "  'costType': 'No Cost',\n",
-       "  'maxammo': '-1',\n",
-       "  'range': [825, 825, 825, 825, 825],\n",
-       "  'rangeBurn': '825',\n",
-       "  'image': {'full': 'AatroxW.png',\n",
-       "   'sprite': 'spell0.png',\n",
-       "   'group': 'spell',\n",
-       "   'x': 240,\n",
-       "   'y': 48,\n",
-       "   'w': 48,\n",
-       "   'h': 48},\n",
-       "  'resource': 'No Cost'},\n",
-       " {'id': 'AatroxE',\n",
-       "  'name': 'Umbral Dash',\n",
-       "  'description': 'Passively, Aatrox heals when damaging enemy champions. On activation, he dashes in a direction.',\n",
-       "  'tooltip': '<spellPassive>Passive:</spellPassive> Aatrox gains <lifeSteal>{{ espellvamp }}% Omnivamp</lifeSteal> against champions, increased to <lifeSteal>{{ espellvampempowered }}% Omnivamp</lifeSteal> during <keywordMajor>World Ender</keywordMajor>.<br /><br /><spellActive>Active:</spellActive> Aatrox dashes. He can use this Ability while winding up his other Abilities.',\n",
-       "  'leveltip': {'label': ['Cooldown',\n",
-       "    'Healing %',\n",
-       "    'Healing % during World Ender'],\n",
-       "   'effect': ['{{ cooldown }} -> {{ cooldownNL }}',\n",
-       "    '{{ espellvamp }}% -> {{ espellvampNL }}%',\n",
-       "    '{{ espellvampempowered }}% -> {{ espellvampempoweredNL }}%']},\n",
-       "  'maxrank': 5,\n",
-       "  'cooldown': [9, 8, 7, 6, 5],\n",
-       "  'cooldownBurn': '9/8/7/6/5',\n",
-       "  'cost': [0, 0, 0, 0, 0],\n",
-       "  'costBurn': '0',\n",
-       "  'datavalues': {},\n",
-       "  'effect': [None,\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0]],\n",
-       "  'effectBurn': [None, '0', '0', '0', '0', '0', '0', '0', '0', '0', '0'],\n",
-       "  'vars': [],\n",
-       "  'costType': 'No Cost',\n",
-       "  'maxammo': '1',\n",
-       "  'range': [25000, 25000, 25000, 25000, 25000],\n",
-       "  'rangeBurn': '25000',\n",
-       "  'image': {'full': 'AatroxE.png',\n",
-       "   'sprite': 'spell0.png',\n",
-       "   'group': 'spell',\n",
-       "   'x': 288,\n",
-       "   'y': 48,\n",
-       "   'w': 48,\n",
-       "   'h': 48},\n",
-       "  'resource': 'No Cost'},\n",
-       " {'id': 'AatroxR',\n",
-       "  'name': 'World Ender',\n",
-       "  'description': 'Aatrox unleashes his demonic form, fearing nearby enemy minions and gaining attack damage, increased healing, and movement speed. If he gets a takedown, this effect is extended.',\n",
-       "  'tooltip': 'Aatrox reveals his true demonic form, <status>Fearing</status> nearby minions for {{ rminionfearduration }} seconds and gaining <speed>{{ rmovementspeedbonus*100 }}% Move Speed</speed> decaying over {{ rduration }} seconds. He also gains <scaleAD>{{ rtotaladamp*100 }}% Attack Damage</scaleAD> and increases <healing>self-healing by {{ rhealingamp*100 }}%</healing> for the duration.<br /><br />Champion takedowns extend the duration of this effect by {{ rextension }} seconds and refresh the <speed>Move Speed</speed> effect.',\n",
-       "  'leveltip': {'label': ['Total Attack Damage Increase',\n",
-       "    'Healing Increase',\n",
-       "    'Move Speed',\n",
-       "    'Cooldown'],\n",
-       "   'effect': ['{{ rtotaladamp*100.000000 }}% -> {{ rtotaladampnl*100.000000 }}%',\n",
-       "    '{{ rhealingamp*100.000000 }}% -> {{ rhealingampnl*100.000000 }}%',\n",
-       "    '{{ rmovementspeedbonus*100.000000 }}% -> {{ rmovementspeedbonusnl*100.000000 }}%',\n",
-       "    '{{ cooldown }} -> {{ cooldownNL }}']},\n",
+       "  'resource': '{{ cost }} {{ abilityresourcename }}'},\n",
+       " {'id': 'SamiraR',\n",
+       "  'name': 'Inferno Trigger',\n",
+       "  'description': 'Samira unleashes a torrent of shots from her weapons, wildly shooting all enemies surrounding her.',\n",
+       "  'tooltip': 'Samira can only use this Ability if her current <keywordMajor>Style</keywordMajor> rating is S.<br /><br />Samira unleashes a torrent of shots from her weapons, wildly shooting all enemies surrounding her 10 times over 2 seconds, each shot dealing <physicalDamage>{{ damagecalc }} physical damage</physicalDamage> and applying lifesteal at {{ lifestealmod*100 }}% effectiveness. Each shot can also critically strike.<br /><br />',\n",
+       "  'leveltip': {'label': ['Damage', '@AbilityResourceName@ Cost'],\n",
+       "   'effect': ['{{ basedamage }} -> {{ basedamageNL }}',\n",
+       "    '{{ cost }} -> {{ costNL }}']},\n",
        "  'maxrank': 3,\n",
-       "  'cooldown': [120, 100, 80],\n",
-       "  'cooldownBurn': '120/100/80',\n",
-       "  'cost': [0, 0, 0],\n",
-       "  'costBurn': '0',\n",
+       "  'cooldown': [8, 8, 8],\n",
+       "  'cooldownBurn': '8',\n",
+       "  'cost': [100, 50, 0],\n",
+       "  'costBurn': '100/50/0',\n",
        "  'datavalues': {},\n",
        "  'effect': [None,\n",
        "   [0, 0, 0],\n",
@@ -7425,71 +7418,67 @@
        "   [0, 0, 0]],\n",
        "  'effectBurn': [None, '0', '0', '0', '0', '0', '0', '0', '0', '0', '0'],\n",
        "  'vars': [],\n",
-       "  'costType': 'No Cost',\n",
+       "  'costType': ' {{ abilityresourcename }}',\n",
        "  'maxammo': '-1',\n",
-       "  'range': [25000, 25000, 25000],\n",
-       "  'rangeBurn': '25000',\n",
-       "  'image': {'full': 'AatroxR.png',\n",
-       "   'sprite': 'spell0.png',\n",
+       "  'range': [600, 600, 600],\n",
+       "  'rangeBurn': '600',\n",
+       "  'image': {'full': 'SamiraR.png',\n",
+       "   'sprite': 'spell10.png',\n",
        "   'group': 'spell',\n",
-       "   'x': 336,\n",
-       "   'y': 48,\n",
+       "   'x': 240,\n",
+       "   'y': 96,\n",
        "   'w': 48,\n",
        "   'h': 48},\n",
-       "  'resource': 'No Cost'}]"
+       "  'resource': '{{ cost }} {{ abilityresourcename }}'}]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r.json()['data']['Aatrox']['spells']"
+    "r.json()['data']['Samira']['spells']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Use Umbral Dash while casting The Darkin Blade to increase your chances of hitting the enemy.',\n",
-       " \"Crowd Control abilities like Infernal Chains or your allies' immobilizing effects will help you set up The Darkin Blade.\",\n",
-       " 'Cast World Ender when you are sure you can force a fight.']"
+       "[]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r.json()['data']['Aatrox']['allytips']"
+    "r.json()['data']['Samira']['allytips']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[\"Aatrox's attacks are very telegraphed, so use the time to dodge the hit zones.\",\n",
-       " \"Aatrox's Infernal Chains are easier to exit when running towards the sides or at Aatrox.\",\n",
-       " 'Keep your distance when Aatrox uses his Ultimate to prevent him from reviving.']"
+       "[]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r.json()['data']['Aatrox']['enemytips']"
+    "r.json()['data']['Samira']['enemytips']"
    ]
   },
   {
@@ -7502,6 +7491,33 @@
     "# The Darkin Blade\n",
     "#"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "360"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CHAMPION_NAME_TO_ID['samira']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
